{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 25,
  "lineage": "05708ab0-2d1f-a838-11ff-3dc4145a7f97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ae19636c0d4fec5",
            "arn": "arn:aws:ec2:us-east-1:357938784458:elastic-ip/eipalloc-05ae19636c0d4fec5",
            "associate_with_private_ip": "10.80.1.44",
            "association_id": "eipassoc-0fef8e8a7f18f7989",
            "domain": "vpc",
            "id": "eipalloc-05ae19636c0d4fec5",
            "instance": "i-0a4c768e439577b9a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-003f3b694f5f99711",
            "private_dns": "ip-10-80-1-44.ec2.internal",
            "private_ip": "10.80.1.44",
            "public_dns": "ec2-98-95-91-201.compute-1.amazonaws.com",
            "public_ip": "98.95.91.201",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_eip"
            },
            "tags_all": {
              "Name": "prod_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.prod_nic",
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:357938784458:instance/i-0a4c768e439577b9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4c768e439577b9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kalyankey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-003f3b694f5f99711"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": false,
                "network_interface_id": "eni-003f3b694f5f99711"
              }
            ],
            "primary_network_interface_id": "eni-003f3b694f5f99711",
            "private_dns": "ip-10-80-1-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.80.1.44",
            "public_ip": "98.95.91.201",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034b513aa813d87a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055cbc8f72d636452",
            "tags": {
              "Name": "bath_ser"
            },
            "tags_all": {
              "Name": "bath_ser"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00879c9c6fa2efad3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "i-0a4c768e439577b9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_network_interface.prod_nic",
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:internet-gateway/igw-0e20f55a0d870c6a5",
            "id": "igw-0e20f55a0d870c6a5",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_igw"
            },
            "tags_all": {
              "Name": "prod_igw"
            },
            "vpc_id": "vpc-0ac0fb1b8f3a0c04f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:network-interface/eni-003f3b694f5f99711",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e8a8bf59ca99d77a",
                "device_index": 0,
                "instance": "i-0a4c768e439577b9a",
                "network_card_index": 0
              }
            ],
            "id": "eni-003f3b694f5f99711",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "16:ff:c0:b6:51:59",
            "owner_id": "357938784458",
            "private_ip": "10.80.1.44",
            "private_ip_list": [
              "10.80.1.44"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.80.1.44"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-00879c9c6fa2efad3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055cbc8f72d636452",
            "tags": {
              "Name": "prod_nic"
            },
            "tags_all": {
              "Name": "prod_nic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:route-table/rtb-0ad6e3c4bb5f49a01",
            "id": "rtb-0ad6e3c4bb5f49a01",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e20f55a0d870c6a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_rt"
            },
            "tags_all": {
              "Name": "prod_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac0fb1b8f3a0c04f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-0ad6e3c4bb5f49a01",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd716abe51d059bf",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad6e3c4bb5f49a01",
            "subnet_id": "subnet-055cbc8f72d636452"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_rt",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:security-group/sg-00879c9c6fa2efad3",
            "description": "allow SSH,HTTP and HTTPS protocols",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00879c9c6fa2efad3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod_web_sg",
            "name_prefix": "",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_sg"
            },
            "tags_all": {
              "Name": "prod_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac0fb1b8f3a0c04f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "sg-00879c9c6fa2efad3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-055cbc8f72d636452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.80.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055cbc8f72d636452",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_sn"
            },
            "tags_all": {
              "Name": "prod_sn"
            },
            "vpc_id": "vpc-0ac0fb1b8f3a0c04f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-055cbc8f72d636452",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:vpc/vpc-0ac0fb1b8f3a0c04f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.80.0.0/16",
            "default_network_acl_id": "acl-0da7bd52ce7b443d0",
            "default_route_table_id": "rtb-02d0726585cdf0312",
            "default_security_group_id": "sg-0893a287c6a1cfa3a",
            "dhcp_options_id": "dopt-0c50db0b14ddb7b3a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac0fb1b8f3a0c04f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d0726585cdf0312",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "vpc-0ac0fb1b8f3a0c04f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}